MB-28919 ensure sidebar nav is always visible
- added some bottom margin
   (More than the height of the query monitoring footer)

Reviewed-on: http://review.couchbase.org/91775
Tested-by: Rob Ashcom <rob.ashcom@gmail.com>
Well-Formed: Build Bot <build@couchbase.com>

--- a/priv/public/ui/app/css/cbui-layout.css
+++ b/priv/public/ui/app/css/cbui-layout.css
@@ -51,7 +51,7 @@ nav.nav-sidebar {
   flex: 0 0 auto;
   border-right: 1px solid #ececec;
   padding: .25rem 0 2rem 0;
-  margin: 0 2rem 0 0;
+  margin: 0 2rem 120px 0;
   text-align: right;
 }
 /* wrapper for all content in <main> besides sidebar -------------------- */
